flux-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts: 
    - flux-webhook.bo0tzz.me
    secretName: webhook-tls
  rules:
  - host: flux-webhook.bo0tzz.me
    http:
      paths:
      - path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
